fead: 메인화면 로직 구현/DB 연결